Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_List_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_List_Unit_Price__c</fullName>
    <formula>IF((Original_List_Unit_Price__c!=NULL ||Original_List_Unit_Price__c!=0), Text(Original_List_Unit_Price__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly List Unit Price</label>
    <type>Text</type>
</CustomField>