Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Unit_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Unit_List_Price__c</fullName>
    <label>Monthly Unit List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>