Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Price_for_Support__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_for_Support__c</fullName>
    <description>Field to set net price via price rule for support value calculation.</description>
    <inlineHelpText>Field to set net price via price rule for support value calculation.</inlineHelpText>
    <label>Net Price for Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>