Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Total_Adj_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Adj_Bundle__c</fullName>
    <description>Calculate Net total of Line Items and exclude parent of bundle products</description>
    <formula>IF(Parent_of_Bundle__c= true,
0,
If(ISBLANK(SBQQ__Dimension__c),SBQQ__NetTotal__c,SBQQ__NetPrice__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total Adj Bundle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>