Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Unit_Price__c</fullName>
    <description>BIZ-46254</description>
    <formula>SBQQ__NetPrice__c/SBQQ__ProrateMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Net Unit Price</inlineHelpText>
    <label>Net Unit Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>