Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NetSuite_Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Billing_Schedule__c</fullName>
    <description>Stores the NetSuite_Billing_Schedule__c field from product2</description>
    <inlineHelpText>Stores the NetSuite_Billing_Schedule__c field from product2</inlineHelpText>
    <label>NetSuite Billing Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>