Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Num_Invoices_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Num_Invoices_Per_Year__c</fullName>
    <description>Returns the number of invoices that will be generated per year based on the segment months and the billing frequency. Calculated on per line basis and only references Segment Months if Quarterly Billing Frequency.</description>
    <formula>IF(
    ISPICKVAL(SBQQ__BillingFrequency__c, &quot;Quarterly&quot;),
    CASE(
        Segment_Months__c,
        9, 3,
        10, 4,
        11, 4,
        12, 4,
        13, 5, 
        14, 5,
        15, 5,
        0
    ),
    IF(
        ISPICKVAL(SBQQ__BillingFrequency__c, &quot;Semiannual&quot;),
        2,
        IF(
            ISPICKVAL(SBQQ__BillingFrequency__c, &quot;Annual&quot;),
            1,
            0
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Invoices Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>