Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/OP4I_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_Id__c</fullName>
    <formula>SBQQ__Quote__r.OP4IDealID__c</formula>
    <label>OP4I Deal Id</label>
    <type>Text</type>
</CustomField>