Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/OP4I_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Pricebook__c</fullName>
    <description>Stores the pricebook selected on the op4i deal and integration will bring it from Op4I</description>
    <label>OP4I Pricebook</label>
    <length>50</length>
    <type>Text</type>
</CustomField>