Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Ordered__c.field-meta.xml
<CustomField>
    <fullName>Ordered__c</fullName>
    <description>BIZ-60530 - Set this flag if quote is ordered</description>
    <formula>IF(SBQQ__Quote__r.SBQQ__Ordered__c &amp;&amp; NOT(ISBLANK(SBQQ__Quote__r.Order__c)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordered</label>
    <type>Checkbox</type>
</CustomField>