Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/OrderSplit__c.field-meta.xml
<CustomField>
    <fullName>OrderSplit__c</fullName>
    <formula>IF(ISPICKVAL(Services_Product_Type__c, &apos;T&amp;M&apos;),
    IF(OR(SBQQ__EffectiveQuantity__c &lt; 0,SBQQ__NetTotal__c &lt; 0), &apos;TNM-NEGATIVE&apos;,&apos;TNM-POSITIVE&apos;),
    IF(OR(SBQQ__EffectiveQuantity__c &lt; 0,SBQQ__NetTotal__c &lt; 0), &apos;NONTNM-NEGATIVE&apos;,&apos;NONTNM-POSITIVE&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderSplit</label>
    <type>Text</type>
</CustomField>