Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Original_List_Total__c.field-meta.xml
<CustomField>
    <fullName>Original_List_Total__c</fullName>
    <formula>Original_List_Unit_Price__c*SBQQ__Quantity__c*SBQQ__Quote__r.SBQQ__SubscriptionTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>