Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Original_List_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_List_Unit_Price__c</fullName>
    <label>Original List Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>