Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in static bundle price overriding</description>
    <label>Price Override</label>
    <type>Checkbox</type>
</CustomField>