Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Override_Sales_Price_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Override_Sales_Price_Per_Month__c</fullName>
    <description>Enter the customer unit price per month for this line -- discounts will be calculated and applied automatically.</description>
    <inlineHelpText>Enter the customer unit price per month for this line -- discounts will be calculated and applied automatically.</inlineHelpText>
    <label>Override Sales Price Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>