Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Parent_Bundle_Key__c.field-meta.xml
<CustomField>
    <fullName>Parent_Bundle_Key__c</fullName>
    <description>BIZ-68140 - The identifier for the parent bundle associated with the Quote Line. Used to link component items to their respective bundle.</description>
    <label>Parent Bundle Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>