Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Parent_Line_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line_Id_Text__c</fullName>
    <description>BIZ-68140 - The ID of the parent Quote Line that this Quote Line is associated with. Used to link related quote lines in a hierarchical structure, for bundle components.</description>
    <label>Parent Line Id Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>