Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Payment_adjustment__c.field-meta.xml
<CustomField>
    <fullName>Payment_adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment adjustment</label>
    <type>Checkbox</type>
</CustomField>