Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Previous_ACV_Change__c.field-meta.xml
<CustomField>
    <fullName>Previous_ACV_Change__c</fullName>
    <description>Created as part of BIZ-46107 which will calculate automatically for Subscription products(product type = software)</description>
    <label>Previous ACV Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>