Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Previous_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Previous_Unit_Price__c</fullName>
    <description>Capture previous customer sold unit price, used in amendments and renewals</description>
    <formula>IF( ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &apos;Amendment&apos;), SBQQ__UpgradedSubscription__r.SBQQ__RenewalPrice__c,
IF( ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &apos;Renewal&apos;), SBQQ__RenewedSubscription__r.SBQQ__RenewalPrice__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>