Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_For_ACV__c.field-meta.xml
<CustomField>
    <fullName>Price_For_ACV__c</fullName>
    <description>BIZ-45090</description>
    <label>Price For ACV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>