Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Rule_Processed__c.field-meta.xml
<CustomField>
    <fullName>Price_Rule_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Calculates from Price Rule, created for backend purpose only</description>
    <label>Price Rule Processed</label>
    <type>Checkbox</type>
</CustomField>