Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Prime_Service_Hours__c.field-meta.xml
<CustomField>
    <fullName>Prime_Service_Hours__c</fullName>
    <description>Field is created as a part of story: BIZ-49977 to differentiate a product as prime</description>
    <label>Prime Service Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>