Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Code_Bundle_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Bundle_Line_Item__c</fullName>
    <formula>IF(SBQQ__RequiredBy__c != NULL, SBQQ__RequiredBy__r.SBQQ__ProductCode__c, SBQQ__ProductCode__c)</formula>
    <label>Product Code (Bundle Line Item)</label>
    <type>Text</type>
</CustomField>