Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Field to pull the Product Group on the associated Product</description>
    <formula>TEXT(SBQQ__Product__r.Product_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field to pull the Product Group on the associated Product</inlineHelpText>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>