Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_is_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_is_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product is Bundle</label>
    <type>Checkbox</type>
</CustomField>