Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Line_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Deployment__c</fullName>
    <description>BIZ-43794</description>
    <formula>(IF(
SBQQ__Product__r.Product_Line_Deployment__c= TRUE,
TRUE,
FALSE
))</formula>
    <label>Product Line Deployment</label>
    <type>Checkbox</type>
</CustomField>