Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Name_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Bundle__c</fullName>
    <formula>if( SBQQ__Quote__r.Bundle_Product_Count__c &gt; 0,Bundle_Products__c + Bundle_Products_Extn2__c + Bundle_Products_Extn3__c,Item_Master_Name__c)</formula>
    <label>Product Name (Bundle)</label>
    <type>Text</type>
</CustomField>