Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Name_Bundle_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Bundle_Line_Item__c</fullName>
    <formula>if (SBQQ__RequiredBy__c != null, SBQQ__RequiredBy__r.Product_Name_Bundle__c,Item_Master_Name__c )

/*
SBQQ__RequiredBy__r.Product_Name_Bundle__c
*/</formula>
    <label>Product Name (Bundle Line Item)</label>
    <type>Text</type>
</CustomField>