Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <formula>SBQQ__Product__r.Product_Number__c</formula>
    <label>Product Number</label>
    <type>Text</type>
</CustomField>