Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Services Discount</fullName>
            </value>
            <value>
                <fullName>Software Discount (One-Time)</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Services (Recurring)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>