Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_type_for_roll_up__c.field-meta.xml
<CustomField>
    <fullName>Product_type_for_roll_up__c</fullName>
    <label>Product type for roll-up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>