Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Type_Non_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Non_Bundle__c</fullName>
    <formula>IF ( OR(SBQQ__RequiredBy__c != NULL, Is_Bundle_Product__c == TRUE) , &apos;&apos; , TEXT( Product_Type__c) )</formula>
    <label>Product Type Non Bundle</label>
    <type>Text</type>
</CustomField>