Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Proforma_Invoice_Renewal_Quote__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Renewal_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the underlying Renewal Letter</description>
    <label>Proforma Invoice (Renewal Quote)</label>
    <referenceTo>Proforma_Invoice__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Renewal_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>