Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ProrateAmountDiscount__c.field-meta.xml
<CustomField>
    <fullName>ProrateAmountDiscount__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorate Amount Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>