Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/QL_Implementation_Services_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>QL_Implementation_Services_Sales_Price__c</fullName>
    <label>QL Implementation Services Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>