Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quantity_No_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Quantity_No_Decimal__c</fullName>
    <formula>SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity No Decimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>