Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Order__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Order__c</fullName>
    <label>Quote Line Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>