Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Segment__c.field-meta.xml
<CustomField>
    <fullName>Quote_Segment__c</fullName>
    <formula>SBQQ__Quote__r.Id &amp;&apos;#&apos;&amp; TEXT(SBQQ__SegmentIndex__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Segment</label>
    <type>Text</type>
</CustomField>