Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Recurring_Amount_Change__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Amount_Change__c</fullName>
    <label>Rec Amount Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>