Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Recurring_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Discount_Percentage__c</fullName>
    <description>Created as part of BIZ-50204</description>
    <formula>IF(
    OR(
        VALUE(RIGHT(TEXT((SBQQ__CustomerTotal__c / (SBQQ__EffectiveQuantity__c * Segment_Months__c)) * 10000), 1)) &gt; 0,
        VALUE(RIGHT(TEXT((SBQQ__CustomerTotal__c / (SBQQ__EffectiveQuantity__c * Segment_Months__c)) * 1000), 1)) &gt; 0
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Discount Percentage</label>
    <type>Checkbox</type>
</CustomField>