Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Renewal_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quote_Type__c</fullName>
    <description>Formula field to capture Renewal Quote Type</description>
    <formula>TEXT(SBQQ__Quote__r.Renewal_Quote_Type__c)</formula>
    <label>Renewal Quote Type</label>
    <type>Text</type>
</CustomField>