Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Required_By_Discount__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Discount__c</fullName>
    <formula>if(SBQQ__RequiredBy__r.SBQQ__Discount__c = null,0,SBQQ__RequiredBy__r.SBQQ__Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required By Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>