Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Required_By_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Product_Code__c</fullName>
    <description>Field to show product code value of parent product</description>
    <formula>SBQQ__RequiredBy__r.SBQQ__ProductCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required By Product Code</label>
    <type>Text</type>
</CustomField>