Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Retainer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field to display retainer amount in case of service products.
Built according to US# BIZ- 45113.</description>
    <label>Retainer Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>