Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Revenue_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Allocation__c</fullName>
    <defaultValue>1</defaultValue>
    <description>BIZ-68140 - Percentage used to allocate revenue to individual components based on the overall segmented bundle price.</description>
    <label>Revenue Allocation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>