Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Segment_Bundle_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Segment_Bundle_Line_Id__c</fullName>
    <description>BIZ-68140 - Identifies the associated Segment Bundle Line for the Quote Line, linking it to the relevant bundle configuration.</description>
    <label>Segment Bundle Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>