Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Segment_Index_Custom__c.field-meta.xml
<CustomField>
    <fullName>Segment_Index_Custom__c</fullName>
    <description>Capture Segment Index of Select Bundle to aggregate</description>
    <label>Segment Index Custom</label>
    <length>16</length>
    <type>Text</type>
</CustomField>