Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/segment_List_Unit_price__c.field-meta.xml
<CustomField>
    <fullName>segment_List_Unit_price__c</fullName>
    <formula>IF(AND(OR(ISPICKVAL(Product_Type__c, &apos;Software&apos;),ISPICKVAL(Product_Type__c, &apos;Software Discount&apos;),ISPICKVAL(Product_Type__c, &apos;Software Discount (One-Time)&apos;)), NOT(CONTAINS(SBQQ__Product__r.Name, &apos;Payment Adjustment&apos;))), Total_Price_Book_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>segment List Unit price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>