Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Segment_Month_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Segment_Month_Decimal__c</fullName>
    <description>Created as part of BIZ-50719</description>
    <formula>If(AND(Type__c=&apos;Amendment&apos;,DAY(SBQQ__EffectiveStartDate__c)&lt;&gt;1),
ROUND (((SBQQ__EffectiveEndDate__c-SBQQ__EffectiveStartDate__c)*12) / 365, 1),
Segment_Months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Month Decimal</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>