Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Segment_Months__c.field-meta.xml
<CustomField>
    <fullName>Segment_Months__c</fullName>
    <description>Calculate the difference of months between Start Date and End Date, created as per BIZ-46251</description>
    <formula>IF(DAY(SBQQ__EffectiveEndDate__c) &lt; DAY(SBQQ__EffectiveStartDate__c), 
		        (MONTH(SBQQ__EffectiveEndDate__c)) + (12*(YEAR(SBQQ__EffectiveEndDate__c)-(YEAR(SBQQ__EffectiveStartDate__c)))) - 
			        (MONTH(SBQQ__EffectiveStartDate__c)), 
		        (MONTH(SBQQ__EffectiveEndDate__c)) + (12*(YEAR(SBQQ__EffectiveEndDate__c)-YEAR(SBQQ__EffectiveStartDate__c))) - 
			        MONTH(SBQQ__EffectiveStartDate__c) + 1
	       )</formula>
    <label>Segment Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>