Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Segment_Term__c.field-meta.xml
<CustomField>
    <fullName>Segment_Term__c</fullName>
    <label>Segment Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>