Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SegmentIndex_Year__c.field-meta.xml
<CustomField>
    <fullName>SegmentIndex_Year__c</fullName>
    <description>Updated to ensure proper handling of segmented v. non-segmented lines as a part of BIZ-61867</description>
    <formula>IF(
  AND(
    OR(
      SBQQ__Quote__r.SegmentIndex_Max_Value__c = 0, 
      AND(SBQQ__Quote__r.SegmentIndex_Max_Value__c &gt; 0, ISBLANK(SBQQ__RequiredBy__c)), 
      NOT(ISBLANK(SBQQ__RequiredBy__c))
    ), 
    SBQQ__SegmentIndex__c = 0
  ), 
  1, 
  SBQQ__SegmentIndex__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SegmentIndex (Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>