Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Software_License_Term__c.field-meta.xml
<CustomField>
    <fullName>Software_License_Term__c</fullName>
    <formula>CASE(SBQQ__Product__r.Product_License_Type__c,
  &quot;Annual&quot;,&quot;Annual License&quot;,
  &quot;Services&quot;,&quot;Services&quot;,
  &quot;Other&quot;
)</formula>
    <label>Software License Term</label>
    <type>Text</type>
</CustomField>