Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Software_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Software_Payment_Term__c</fullName>
    <description>This will populate the value of Software Payment term.</description>
    <label>Software Payment Term</label>
    <length>18</length>
    <type>Text</type>
</CustomField>