Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SolutionQuantity__c.field-meta.xml
<CustomField>
    <fullName>SolutionQuantity__c</fullName>
    <description>Used in config attribute</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>