Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SplitT_M__c.field-meta.xml
<CustomField>
    <fullName>SplitT_M__c</fullName>
    <description>BIZ-48616</description>
    <formula>IF(ISPICKVAL(Services_Product_Type__c, &apos;T&amp;M&apos;) ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SplitT&amp;M</label>
    <type>Checkbox</type>
</CustomField>